...
        cardStyle: { backgroundColor: colors.background.primary },
      }}
    >
      <Stack.Screen
        name="Vault"
        component={VaultScreen}
        options={{ title: 'My Anchors' }}
      />
      <Stack.Screen
        name="AnchorDetail"
        component={AnchorDetailScreen}
        options={{ title: 'Anchor Details' }}
      />
      <Stack.Screen
        name="CreateAnchor"
        component={IntentionInputScreen}
        options={{ title: 'Create Anchor' }}
      />
      <Stack.Screen
        name="SigilSelection"
        component={SigilSelectionScreen}
        options={{ title: 'Select Your Symbol' }}
      />
...
